# fapweb

./: .gitignore  build.sbt  package-lock.json  package.json  start.bash  wpcootrasaluddump.sql  wpfunapoyodump.sql
backrust/: Cargo.toml  Rocket.toml  config.properties  run  run.bash
backrust/.metals/: metals.h2.db  metals.lock.db
backrust/src/: main.rs
backrust/src/api/: handler.rs  mod.rs
backrust/src/api/controller/: cartera_controller.rs  colocacion_controller.rs  mod.rs  persona_controller.rs  solicitud_controller.rs
backrust/src/api/controller/models/: custom_date_format.rs  custom_datetime_format.rs  custom_vec_format.rs  mod.rs  persona.rs  persona_adicional.rs  persona_extra.rs  tipo_ciiu.rs  tipo_contrato.rs  tipo_estado_civil.rs  tipo_estado_persona.rs  tipo_estrato.rs  tipo_identificacion.rs  tipo_nivel_estudio.rs  tipo_ocupacion.rs  tipo_persona.rs  tipo_relacion.rs  tipo_sector.rs  tipo_vivienda.rs
backrust/src/api/models/: custom_datetime_format.rs  mod.rs
backrust/src/api/models/cartera/: categoria.rs  clasificacion.rs  colocacion.rs  ente_aprobador.rs  estado_colocacion.rs  extracto.rs  garantia.rs  inversion.rs  linea.rs  mod.rs  respaldo.rs  riesgo.rs  solicitud.rs  tasa_variable.rs
backrust/src/api/models/connection/: factory.rs  mod.rs
backrust/src/api/models/global/: mod.rs  oficina.rs
backrust/src/api/models/persona/: mod.rs  persona.rs  persona_adicional.rs  persona_extra.rs
backrust/src/api/models/tipos/: mod.rs  tipo_ciiu.rs  tipo_contrato.rs  tipo_cuota.rs  tipo_estado_civil.rs  tipo_estado_persona.rs  tipo_estado_solicitud.rs  tipo_estrato.rs  tipo_identificacion.rs  tipo_nivel_estudio.rs  tipo_ocupacion.rs  tipo_persona.rs  tipo_relacion.rs  tipo_sector.rs  (+1 more)
backrust/src/http/: mod.rs
backrust/src/modules/: mod.rs
backrust/src/modules/factura/: mod.rs
nomina/backend/: Cargo.toml
nomina/backend/src/: main.rs
nomina/backend/src/connection/: connection.rs  mod.rs
nomina/backend/src/controller/: mod.rs  session_controller.rs  usuario_controller.rs
nomina/backend/src/crud/: mod.rs  session.rs  usuario.rs
nomina/backend/src/http/: handler.rs
nomina/backend/src/token/: mod.rs  token.rs
(+1018 files in other folders)
