[package]
name = "backrust"
version = "0.1.0"
authors = ["Alexander <aldacm2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.4.7"
rocket_contrib = { version = "0.4.7", default-features = false, features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rsfbclient = "0.14.0"
chrono = "0.4.19"

[features]
date_time = ["rsfbclient/date_time"]
pure_rust = ["rsfbclient/rsfbclient-rust"]

[package.metadata.docs.rs]
all-features = true