[package]
name = "backrust"
version = "0.1.0"
authors = ["Alexander <aldacm2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
rsfbclient = "0.16.0"
serde="1.0.126"
serde_json = "1.0.64"
dotproperties = "0.1.0"
chrono = "0.4.19"
base64 = "0.13.0"

[features]
pure_rust = ["rsfbclient/rsfbclient-rust"]

[package.metadata.docs.rs]
all-features = true