[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
actix = "0.12.0"
actix-web = "3.3.2"
actix-service = "2.0.0"
actix-cors = "0.5.4"
actix-web-opentelemetry = "0.10.0"
anyhow = "1.0.41"
chrono = "0.4.19"
dotproperties = "0.1.0"
jsonwebtoken = "7.2.0"
log = "0.4.14"
uuid = { version = "0.8.2", features = ["v4"] }
thiserror = "1.0.26"
derive_more = "0.99.14"
tracing = "0.1.26"
tracing-actix-web = "0.2.1"
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.19"
# Database
postgres = "0.19.1"
# Excel Dependency
xlsxwriter = "0.3.4"
tokio = "1.8.1"
futures = "0.3.15"
base64-stream = "1.2.6"
env_logger = "0.9.0"
# Protocolo General
protocol = { path = "../protocol" }